# ApplyPilot

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
agent/: applypilot.agent.yaml
config/: mcp.mongodb.example.json
devpost/: PROJECT.md
src/applypilot/: __init__.py  agent.py  api.py  auth.py  db.py  db_mcp.py  demo.py  gemini.py  job_fetcher.py  models.py  tools.py
src/applypilot/static/: app.js  index.html  styles.css
tests/: test_api.py  test_applypilot.py  test_gemini.py
