[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "applypilot"
version = "0.1.0"
description = "ApplyPilot job application agent reference implementation."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "ApplyPilot contributors" }
]
dependencies = [
  "fastapi>=0.115",
  "google-genai>=1.51.0",
  "httpx>=0.28",
  "mcp>=1.0",
  "bcrypt>=4.0",
  "pymongo>=4.6",
  "python-dotenv>=1.0",
  "python-jose[cryptography]>=3.3",
  "uvicorn[standard]>=0.30"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
applypilot = ["static/*"]
